[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Player/Stats.gd" type="Script" id=2]
[ext_resource path="res://src/Player/Camera.gd" type="Script" id=3]
[ext_resource path="res://src/Player/Hand.gd" type="Script" id=4]
[ext_resource path="res://src/Player/HudManager.gd" type="Script" id=5]
[ext_resource path="res://src/hud/Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/hud/GameMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://res/audio/HudOpen.wav" type="AudioStream" id=8]
[ext_resource path="res://res/audio/HudClose.wav" type="AudioStream" id=9]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.5

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "walk"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "shoot"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "idle"

[sub_resource type="AnimationNodeBlend2" id=5]

[sub_resource type="AnimationNodeBlend2" id=6]

[sub_resource type="AnimationNodeBlendTree" id=7]
graph_offset = Vector2( -212, -230.5 )
nodes/Animation/node = SubResource( 4 )
nodes/Animation/position = Vector2( 20, -80 )
"nodes/Animation 2/node" = SubResource( 2 )
"nodes/Animation 2/position" = Vector2( 20, 160 )
"nodes/Animation 3/node" = SubResource( 3 )
"nodes/Animation 3/position" = Vector2( 600, -180 )
nodes/idle_walk/node = SubResource( 5 )
nodes/idle_walk/position = Vector2( 400, -20 )
nodes/move_shoot/node = SubResource( 6 )
nodes/move_shoot/position = Vector2( 860, 0 )
nodes/output/position = Vector2( 1220, 60 )
node_connections = [ "output", 0, "move_shoot", "idle_walk", 0, "Animation", "idle_walk", 1, "Animation 2", "move_shoot", 0, "idle_walk", "move_shoot", 1, "Animation 3" ]

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("RotationPivot/Camera/Hand:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.140163, -0.472404, -0.802328 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RotationPivot/Camera/Hand:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -19.8404, 12.6309, -35.5361 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RotationPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("RotationPivot/Camera/Hand:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.140163, -0.344238, -0.802328 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RotationPivot/Camera/Hand:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -6.34098 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RotationPivot:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 2.5 ), Vector3( 0, 0, -2.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RotationPivot/Camera/Hand:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.140163, -0.472404, -0.802328 ), Vector3( 0.0708373, -0.577119, -0.748072 ), Vector3( 0.185959, -0.403229, -0.838169 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RotationPivot/Camera/Hand:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -19.8404, 12.6309, -35.5361 ), Vector3( -22.8935, 7.89461, -33.809 ), Vector3( -24.9652, 4.3644, -32.3526 ) ]
}

[node name="Player" type="KinematicBody"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="Stats" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.743792, 0 )
shape = SubResource( 1 )

[node name="RotationPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="RotationPivot"]
script = ExtResource( 3 )

[node name="Hand" type="Spatial" parent="RotationPivot/Camera"]
transform = Transform( 0.83719, 0.506755, 0.20569, -0.546714, 0.765446, 0.339401, 0.0145491, -0.396597, 0.917877, 0.140163, -0.472404, -0.802328 )
script = ExtResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 7 )
anim_player = NodePath("../MovementAnimation")
active = true
parameters/idle_walk/blend_amount = 0.0
parameters/move_shoot/blend_amount = 0.0

[node name="MovementAnimation" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 8 )
anims/shoot = SubResource( 9 )
anims/walk = SubResource( 10 )

[node name="HudManager" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Inventory" parent="HudManager" instance=ExtResource( 6 )]
visible = false

[node name="GameMenu" parent="HudManager" instance=ExtResource( 7 )]
visible = false

[node name="OpenAudio" type="AudioStreamPlayer" parent="HudManager"]
stream = ExtResource( 8 )

[node name="CloseAudio" type="AudioStreamPlayer" parent="HudManager"]
stream = ExtResource( 9 )
